# omniamni

./: .gitignore  pyproject.toml
omniamni/: __main__.py  config.py
omniamni/model/: __init__.py
omniamni/service/: language.py
