[tool.poetry]
name = "omniamni"
version = "0.1.0"
description = ""
authors = ["cookie.shake <cookie.shake@kakaocorp.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dapr = "1.14.0"
typer = "0.12.5"
loguru = "0.7.2"
fastapi = "0.112.2"
uvicorn = {version = "0.30.6", extras = ["standard"]}
langchain = "0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
